--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,6 @@
     <string name="button_walking">Walking</string>
     <string name="button_sitting">Sitting</string>
     <string name="button_falling">Falling</string>
+    <string name="switch_record">Recording</string>
+    <string name="no_string">Error: NO STRING</string>
 </resources>
